# zenml_mlops_template

./: .env  .env.example  .gitignore  Makefile  README.md  RULES OF CONDUCT.md  custom-notes.md  docker-compose.yml  init_zenml.py  main.py  monitor_retrain.py  pyproject.toml  run_pipeline.py  setup_zenml_api_key.py
config/: prometheus.yml
config/grafana/dashboards/: mlops-dashboard.json
dockerfiles/: Dockerfile.inference  Dockerfile.init  Dockerfile.monitor  Dockerfile.pipeline-runner  Dockerfile.preprocess  Dockerfile.train  requirements-inference.txt  requirements-pipeline-runner.txt
docs/: 1_tutorial_part1.md  2_tutorial_part2.md  tutorial.ipynb
scripts/: run_zenml_pipeline.sh  zenml_cli.sh
src/pipeline/: __init__.py  data_preprocess.py  pipeline.py  train_model.py
src/services/: __init__.py
src/services/inference/: __init__.py  inference_service.py
src/services/monitor/: monitor_service.py  run_monitor.py
