[project]
name = "zenml-mlops-template"
version = "0.1.0"
description = "MLOps template with ZenML pipelines, MLflow tracking, and FastAPI inference"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "zenml[server]>=0.91.0",
    "mlflow==2.18.0",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "numpy==2.1.3",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "prometheus-client==0.21.0",
    "joblib==1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.8.0",
]
